# opencode-scaffold

./: .claudeignore  .gitattributes  .gitignore  .opencode-scaffold.json  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  OPENCODE-PROD-SETUP-PLAN.md  README.md  README.ru.md  demo.tape  llms.txt  opencode-scaffold-design.md  package-lock.json  package.json  pnpm-lock.yaml  project_map.md  runner.cjs  test.js  tsconfig.json  tsup.config.ts
.claude/: CLAUDE.md  settings.json
.opencode/: SETUP.md  config.json
.setu/: context.json
dev/: benchmark-log.md  status.md
docs/: ARCHITECTURE.md  CHANGELOG.md  INTEGRATION.md  INTEGRATION.ru.md  REFERENCE.md  claude-scaffold-guide.md  claude-scaffold-status-dashboard.md  demo.cast  scaffold-tui-design-doc.md
legacy_v1/: .gitattributes  .npmignore  AGENTS.md  README.ru.md  package-lock.json  package.json  research_results.txt
legacy_v1/templates/: .pre-commit-config.yaml  Makefile  deps.yaml  pyproject.toml
legacy_v1/templates/github-actions/: fastapi-db.yml
legacy_v1/templates/github-actions/deploy/: vps.yml  yc.yml
legacy_v1/templates/github/workflows/: lint.yml  test.yml
legacy_v1/templates/profiles/ai-developer/: CLAUDE.md.en  CLAUDE.md.ru
legacy_v1/templates/profiles/fastapi-developer/: CLAUDE.md.en  CLAUDE.md.ru
legacy_v1/templates/profiles/fullstack/: CLAUDE.md.en  CLAUDE.md.ru
legacy_v1/templates/profiles/ml-engineer/: CLAUDE.md.en  CLAUDE.md.ru
lib/: ccr-config.js  i18n.js  models.js  profiles.js  yaml-parser.js
org-profiles/: README.md
patches/: blessed-xterm@1.5.1.patch
(+318 files in other folders)
